Fix edit view and validator formly fields alignment

--- a/ESSArch_TA/frontend/static/frontend/styles/modules/receive_sip.scss
+++ b/ESSArch_TA/frontend/static/frontend/styles/modules/receive_sip.scss
@@ -144,6 +144,7 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        align-items: baseline;
         padding: 5px;
         width: 100%;
     }
@@ -250,6 +251,7 @@ input[type="checkbox"] {
         display: flex;
         flex-direction: row;
         justify-content: flex-start;
+        align-items: flex-start;
         min-height: 70px;
         .formly-field {
             min-width: 105px;
